added dependencies and made updates to EnhanceTextController